--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             <h1>My Web Site</h1>
             <nav>
                 <ul>
-                    <li><a href="./index.html">Top</a></li>
-                    <li><a href="https://www.apple.com/jp/">Apple</a></li>
-                    <li><a href="https://www.google.com/?hl=ja">Google</a></li>
-                    <li><a href="https://ja-jp.facebook.com/">FaceBook</a></li>
+                    <li><a href=#MyProfile>My Profile</a></li>
+                    <li><a href=#School>School</a></li>
+                    <li><a href=#FavoriteMusic>Favorite Music</a></li>
+                    <li><a href=#FavoriteGame>Favorite Game</a></li>
+                    <li><a href=#Maya>Maya</a></li>
+                    <li><a href=#Unity>Unity</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,7 +36,7 @@
     <div class="wrapper">
         <div id="main">
             <div class="content" id="content1">
-                <h1 class="top-title">My Profile</h1>
+                <h1 class="top-title" id="MyProfile">My Profile</h1>
                 <!--<p class="new">new!</p>-->
 
                 <div class="dissolve-animation">
@@ -59,7 +61,7 @@
             </div>
 
             <div class="content" id="content2">
-                <h1 class="top-title-right">School</h1>
+                <h1 class="top-title-right" id="School">School</h1>
                 <div class="left-box">
                     <h2>ECCコンピューター専門学校</h2>
                     <p>
@@ -81,7 +83,7 @@
             </div>
 
             <div class="content" id="content3">
-                <h1 class="top-title">Favorite Music</h1>
+                <h1 class="top-title" id="FavoriteMusic">Favorite Music</h1>
 
                 <iframe width="300" height="250" src="https://www.youtube.com/embed/Y4nEEZwckuU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="right-box">
@@ -101,7 +103,7 @@
             </div>
 
             <div class="content" id="content4">
-                <h1 class="top-title-right">Favorite Game</h1>
+                <h1 class="top-title-right" id="FavoriteGame">Favorite Game</h1>
                 <div class="left-box">
                     <h2>Minecraft</h2>
                     <p>
@@ -110,7 +112,7 @@
                         右の画像はマイクラ内で自分で<br>
                         作成した家です！<br>
                         <br>
-                        他にも最近ではApex Legendsや<br>
+                        他にも最近はApex Legendsや<br>
                         OverWatch、スプラトゥーン2、<br>
                         Among Usなどもやっています！
                     </p>
@@ -119,7 +121,7 @@
             </div>
 
             <div class="content" id="content5">
-                <h1 class="top-title">Maya</h1>
+                <h1 class="top-title" id="Maya">Maya</h1>
                 <img src="maya.png" alt="" width="300">
                 <div class="right-box">
                     <h2>制作</h2>
@@ -127,26 +129,28 @@
                         趣味でMayaを使って作品を作っています！<br>
                         左の画像は海外の街並みを<br>アニメの世界観に似せて作ったものです！<br>
                         <br>
-
+                        他にもキャラクターを作ったり、<br>
+                        アニメーションさせたりもします！<br>
                     </p>
                 </div>
             </div>
 
             <div class="content" id="content6">
-                <h1 class="top-title-right">Unity</h1>
+                <h1 class="top-title-right" id="Unity">Unity</h1>
                 <div class="left-box">
-                    <h2>ECCコンピューター専門学校</h2>
+                    <h2>制作</h2>
                     <p>
-                        高度情報処理研究学科<br>ゲーム開発エキスパートコース<br>ゲームプログラム専攻 の 2年生です！<br>
+                        Unityでゲームを作ったりもしています！<br>
+                        右の画像はパックマンを3Dに<br>
+                        作り替えたゲームの一部です！<br>
                         <br>
-                        ゲームはどうやって作られているのか、<br>
-                        どうすれば面白いものができるのかなどを<br>
-                        勉強しています！
+                        次はUnityで2DLikeのアクションゲームを<br>
+                        作ろうかなと考えています！<br>
                     </p>
                 </div>
 
                 <!--<div class="dissolve-animation">-->
-                <img src="school_01.jpg" alt="" width="300">
+                <img src="Unity.png" alt="" width="300">
                 <!--<div class="caption">
                         <h2>2015, 06, 10</h2>
                         <h3>Aniamtion 1</h3>
